Add Rest API to retrieve topology config
